fix z-index on navbar

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -19,7 +19,7 @@ $navshadow: 0 0 0.5em $clr-black;
     position: absolute;
     right: 0;
     top: 0;
-    z-index: 1;
+    z-index: 1001;
 }
 
 .navbar__item {
