--- a/src/app/navbar/subnav/subnav.component.scss
+++ b/src/app/navbar/subnav/subnav.component.scss
@@ -12,6 +12,7 @@
     position: absolute;
     right: 0;
     top: $navbar-height - 1px;
+    z-index: 100;
 }
 
 .hidden {
